Updated dark mode to work on scroll, added seperate element for skill elements, componetized the card page, fixed the hydration issue regarding darkmode and dynamic componenets

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,4 +30,10 @@ a {
   font-family: "burtons";
   src: url('../public/Burtons.otf');
 }
+@layer base {
+  body {
+   @apply dark:bg-slate-800 dark:text-white;
+  }
 }
+}
+
